# citeproc-py

./: pyproject.toml  tox.ini
.github/workflows/: test.yml
src/citeproc/: version.py
